# bun-docs-mcp-zed

./: .dprint.jsonc  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MANUAL_TEST_INSTRUCTIONS.md  NEXT_STEPS.md  README.md  TESTING.md  TEST_RESULTS.md  biome.jsonc  build.ts  extension.toml  justfile  package.json  proxy-rust.sh  proxy.js  proxy.ts  rust-toolchain.toml  test-capture.sh  test-proxy-directly.sh  tombi.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: auto-format.yml  autofix.yml  claude-code-review.yml  claude.yml  release.yml  rust-ci.yml
.zed/: settings.json
configuration/: default_settings.jsonc  installation_instructions.md
docs/: SUMMARY.md  phase0-decision.md  phase1-completion.md  platform-matrix.md  protocol-analysis.md  rmcp-evaluation.md
proxy/: Cargo.toml  README.md  test-proxy.sh
proxy/src/: main.rs
proxy/src/http/: mod.rs
proxy/src/protocol/: mod.rs
proxy/src/transport/: mod.rs
src/: lib.rs
