[package]
name        = "bun-docs-mcp-zed"
version     = "0.1.1"
edition     = "2024"
description = "Bun Docs MCP extension for Zed"
repository  = "https://github.com/kjanat/bun-docs-mcp-zed"
license     = "MIT"
keywords    = ["bun", "documentation", "extension", "mcp", "zed"]
categories  = ["development-tools", "text-editors"]

[lib]
crate-type = ["cdylib"]
path       = "src/lib.rs"

[dependencies]
semver            = "1"
zed_extension_api = "0.7.0"

[profile.release]
opt-level     = "z"
strip         = true
lto           = true
panic         = "abort"
codegen-units = 1
