[package]
name        = "bun-docs-mcp-zed"
version     = "1.0.0"
edition     = "2024"
description = "Bun Docs MCP extension for Zed"
repository  = "https://github.com/kjanat/bun-docs-mcp-zed"
license     = "MIT"
keywords    = ["bun", "documentation", "extension", "mcp", "zed"]
categories  = ["development-tools", "text-editors"]
publish     = false

[lib]
crate-type = ["cdylib"]
path       = "src/lib.rs"

[dependencies]
schemars          = "1.2"
serde             = { version = "1", features = ["derive"] }
zed_extension_api = "0.7.0"
