[package]
name = "bun-docs-mcp-proxy"
version = "0.1.0"
edition = "2021"
description = "MCP proxy for Bun documentation search"
license = "MIT"

[dependencies]
anyhow = "1.0"
eventsource-stream = "0.2"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = [
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"  # Optimize for size
strip = true  # Remove debug symbols
lto = true  # Link-time optimization
panic = "abort"  # Smaller binary
codegen-units = 1  # Better optimization
